# AI-Image-detector

./: .gitignore  Dockerfile  payload.image.sample.json  pyproject.toml  readme.md  render.yaml  start.sh
aidetector/: __init__.py
models/: fusion_model.json
src/aidetector/: __init__.py  api.py  cli.py  config.py  curate_dataset.py  eval_dataset.py  fusion.py  learned_fusion.py  pipeline.py  run_logger.py  run_training_cycle.py  schemas.py  train_fusion.py
src/aidetector/detectors/: __init__.py  base.py  deterministic_forensics_layer.py  frequency_layer.py  image_clip_layer.py  image_forensic_transformer_layer.py  image_models.py  metadata_layer.py  placeholders.py  prnu_layer.py  provenance_layer.py  signal_utils.py  spatial_layer.py  tamper_localization_layer.py  temporal_consistency_layer.py  utils.py  video_clip_layer.py  video_forensic_transformer_layer.py  watermark_layer.py
tests/: test_clip_calibration.py  test_consensus_calibration.py  test_detector_defaults.py  test_forensic_metadata_adjustment.py  test_fusion.py  test_fusion_profiles.py  test_hf_source_resolution.py  test_learned_fusion.py  test_mode_profiles.py  test_pipeline_routing.py  test_run_logging.py
